Automated Testing Framework (atf)
Copyright (c) 2007 The NetBSD Foundation, Inc.
All rights reserved.


Version 0.2
===========

Release date: STILL UNDER DEVELOPMENT; NOT RELEASED
Status:       Experimental

Changes:

* Test cases now get a known umask on entry.


Version 0.1
===========

Release date: August 20th, 2007
Status:       Experimental

Changes:

* First public version.  This was released coinciding with the end of the
  Google Summer of Code 2007 program.


-- EOF