@@ -22,9 +22,6 @@ Plans for 0.2
 * Add detection of signals in test cases and run the clean up routines
   afterwards.
 
-* Fix atf-run to show an error if a test program did not provide a result
-  message for those test cases that failed or were skipped.
-
 
 Plans for 0.3
 =============
@@ -55,6 +52,10 @@ Plans for pre-1.0
 =================
 
 * Fix all occurrences of XXX, TODO and FIXME.
+
+* Improve error reporting: aside from clarifying error messages, this also
+  implies adding more error cases to give them more semantic meaning at the
+  source code level..
 
 * Add a way to get atf's version number.  Should this be part of each
   tool (i.e. a -v flag)?  Should this be a property printed by atf-config?
